# thatmagicalos

./: .gitmodules  Cargo.toml  README.md  build.rs  grub.cfg  i686.json  limine.conf  linker.ld  run.sh  shell.nix  x86_64.json
.cargo/: config.toml
flanterm/: Cargo.toml  build.rs  wrapper.h
flanterm/src/: lib.rs
isodir/boot/: kernel  ros
kernel/: Cargo.toml
kernel/src/: apic.rs  gdt.rs  ioapic.rs  kernel.rs  macros.rs  main.rs  scheduler.rs  vga_buffer.rs
kernel/src/arch/x86_64/: boot.asm
kernel/src/graphics/: psf2.rs
kernel/src/interrupts/: handlers.rs  idt.rs  macros.rs  mod.rs  table.rs
kernel/src/memory/: bitmapframealloc.rs  mod.rs  tinyalloc.rs
kernel/src/memory/heap/: linkedlist_alloc.rs  mod.rs
kernel/src/memory/paging/: entry.rs  mapper.rs  mod.rs  remap.rs  table.rs
kernel/src/task/: keyboard.rs  mod.rs  timer.rs  waker.rs
src/: boot.asm  main.rs  vga_buffer.rs  volatile.rs
