[package]
name = "kernel"
version = "0.1.0"
edition = "2024"

[dependencies]
acpi = "6.1.1"
bit_field = "0.10.3"
bitflags = "2.11.0"
crossbeam-queue = { version = "0.3.12", default-features = false, features = ["alloc", "nightly"] }
flanterm = { path = "../flanterm" }
futures-util = { version = "0.3.32", default-features = false, features = ["alloc"] }
lazy_static = { version = "1.5.0", features = ["spin_no_std"] }
limine = "0.6.3"
log = "0.4.29"
pc-keyboard = "0.8.0"
spin = "0.10.0"

[lints.rust]
unexpected_cfgs = { level = "warn", check-cfg = [
    'cfg(log_level, values("trace", "debug", "info", "warn", "error"))'
] }
